--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "swiper": "^6.5.4",
@@ -36,6 +37,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test.jest": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -58,7 +60,10 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-test-renderer": "^17.0.1",
+    "@types/redux-mock-store": "^1.0.2",
     "react-app-rewire-disable-chunks": "0.0.1",
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.1.8",
+    "redux-mock-store": "^1.5.4"
   }
 }
